--- a/ueventd.skate.rc
+++ b/ueventd.skate.rc
@@ -1,22 +1,15 @@
-/dev/oncrpc/*               0660   radio    system
-/dev/msm_camera/*           0660   system   camera
-/dev/smdcntl0               0640   radio    radio
-/dev/smdcntl1               0640   radio    radio
-/dev/smdcntl2               0640   radio    radio
-/dev/kgsl-3d0               0666   root     root
-/dev/taos                   0777   root     root
-/dev/ISL                    0777   root     root
-/dev/si4708                 0777   root     root
-/dev/msm_preproc_ctl        0660   system   audio
-/dev/msm_aac                0660   system   audio
-/dev/msm_evrc               0660   system   audio
-/dev/msm_mp3                0660   system   audio
-/dev/msm_pcm_dec            0660   system   audio
-/dev/msm_qcelp              0660   system   audio
-/dev/msm_voicememo          0660   system   audio
-/dev/msm_wma                0660   system   audio
-/dev/msm_wmapro             0660   system   audio
-/dev/system_bus_freq        0666   system   system
-/dev/genlock                0666   root     system
-/dev/ttyHS0                 0660   root     system
-/dev/graphics/fb0           0666   graphics graphics
+/dev/oncrpc/*        0660   radio     radio
+/dev/msm_camera/*    0777   graphics  graphics
+/dev/graphics/fb0    0777   graphics  graphics
+/dev/smdcntl0        0640   radio     radio
+/dev/smdcntl1        0640   radio     radio
+/dev/smdcntl2        0640   radio     radio
+/dev/taos            0777   root      root
+/dev/si4708          0777   root      root
+/dev/msm_preproc_ctl 0660   system    audio
+/dev/genlock         0666   graphics  graphics
+/dev/kgsl-3d0        0666   graphics  graphics
+/dev/kgsl            0666   graphics  graphics
+/dev/pm_monitor      0770   radio     radio
+/dev/akm8962_aot     0777   system    system
+/dev/akm8962_dev     0777   system    system
