--- a/init.skate.rc
+++ b/init.skate.rc
@@ -20,6 +20,10 @@ on boot
     write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 500000
     write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
     write /sys/devices/system/cpu/cpufreq/ondemand/down_threshold 30
+    write /sys/kernel/mm/ksm/sleep_millisecs 4000
+    write /sys/kernel/mm/ksm/pages_to_scan 128
+    write /sys/kernel/mm/ksm/run 1
+
 
 # Setup charging
     chown system system /sys/module/msm_battery/parameters/usb_chg_enable
