--- a/init.skate.rc
+++ b/init.skate.rc
@@ -1,20 +1,19 @@
 import init.skate.usb.rc
 
 on early-init
-    export EXTERNAL_STORAGE /mnt/sdcard
-    mkdir /mnt/sdcard 0000 system system
-# for backwards compatibility
-    symlink /mnt/sdcard /sdcard
-    chmod 7777 /data/radio/*
-    chown radio radio /data/radio/*
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard0 /sdcard
+    export EXTERNAL_STORAGE /storage/sdcard0
 
 service dhcp-service /system/bin/netcfg wlan0 dhcp
     class main
-        oneshot
+    oneshot
 
 on property:dev.bootcomplete=1
-        stop dhcp-service
-        start dhcp-service
+    stop dhcp-service
+    start dhcp-service
 
 on boot
 
@@ -25,7 +24,6 @@ on boot
     write /sys/kernel/mm/ksm/sleep_millisecs 4000
     write /sys/kernel/mm/ksm/pages_to_scan 128
     write /sys/kernel/mm/ksm/run 1
-
 
 # Setup charging
     chown system system /sys/module/msm_battery/parameters/usb_chg_enable
@@ -65,12 +63,6 @@ on boot
    chmod 0777 /data/local/tmp
    chown radio shell /data/local/tmp
 
-# For qmuxd socket
-    mkdir /data/radio 0770 radio radio
-    chown radio radio 0770 /data/radio
-    chmod 7777 /data/radio/*
-    chown radio radio /data/radio/*
-
     chown system system /sys/class/leds/green/blink
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/green/grpfreq
@@ -93,10 +85,11 @@ on boot
     chown system system /sys/devices/platform/android_usb/composition
     chown system system /sys/devices/platform/android_usb/remote_wakeup
 
-
 # Enable MASS storage on SDCARD
     write /sys/devices/platform/mass_storage/lun0/file /dev/block/mmcblk0p1
     write /sys/bus/platform/drivers/msm_sdcc/msm_sdcc.1/polling 1
+
+    chmod 7777 /data/radio/*
 
 service qmuxd /system/bin/qmuxd 
     class main
