--- a/init.skate.rc
+++ b/init.skate.rc
@@ -1,15 +1,11 @@
 import init.skate.usb.rc
 
 on early-init
-#    mkdir /storage 0050 system sdcard_r
-#    mkdir /storage/sdcard0 0000 system system
-#    symlink /storage/sdcard0 /mnt/sdcard
-#    symlink /storage/sdcard0 /sdcard
-#    export EXTERNAL_STORAGE /storage/sdcard0
-    export EXTERNAL_STORAGE /mnt/sdcard
-    mkdir /mnt/sdcard 0000 system system
-# for backwards compatibility
-    symlink /mnt/sdcard /sdcard
+    mkdir /storage 0050 system sdcard_r
+    mkdir /storage/sdcard0 0000 system system
+    symlink /storage/sdcard0 /mnt/sdcard
+    symlink /storage/sdcard0 /sdcard
+    export EXTERNAL_STORAGE /storage/sdcard0
 
 service dhcp-service /system/bin/netcfg wlan0 dhcp
     class main
