--- a/init.skate.rc
+++ b/init.skate.rc
@@ -149,3 +149,19 @@ service akmd /system/bin/akmd8962
     class main
     user root
     oneshot
+
+on property:persist.service.zram=10
+    start compcache
+
+on property:persist.service.zram=30
+    start compcache
+
+on property:persist.service.zram=50
+    start compcache
+
+# compcache - handle at boot
+service compcache /system/bin/handle_compcache
+    class main 	
+    user root
+    group root
+    disabled
