--- a/init.skate.rc
+++ b/init.skate.rc
@@ -39,14 +39,8 @@ on boot
     write /sys/module/g_android/parameters/product_id 0x1351
 
 # WiFi filesystem structure
-    mkdir /data/misc 01771 system misc
-    mkdir /data/misc/wifi 0770 system wifi
-    mkdir /data/misc/wifi/sockets
-    chown system wifi /data/misc/wifi/sockets
-    chmod 770 /data/misc/wifi/sockets
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    mkdir /data/system 0775 system system
 
     mkdir /data/local
     chmod 0777 /data/local
@@ -113,7 +107,6 @@ on property:init.svc.wpa_supplicant=stopped
 # WPA SETTINGS
 service wpa_supplicant /system/bin/wpa_supplicant -Dwext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
     class main
-    group wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
