--- a/init.skate.rc
+++ b/init.skate.rc
@@ -112,17 +112,22 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dwext -iwlan0 -W -c/data/misc
     disabled
     oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -BKL
-    class main
-    disabled
-    oneshot
-
-service start_usb0 /system/bin/logwrapper /system/bin/sh /etc/start_usb0.sh
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABDKL
     class main
     disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
+
+service dhcpcd_bnep0 /system/bin/dhcpcd -ABDKL
+    class main
+    disabled
+    oneshot
+
+service iprenew_bnep0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
