--- a/ramdisk/init.skate.rc
+++ b/ramdisk/init.skate.rc
@@ -95,7 +95,7 @@ on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd_wlan0
 
 # WPA SETTINGS
-service wpa_supplicant /system/bin/wpa_supplicant -Dwext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dwext -iwlan0 -W -c/data/misc/wifi/wpa_supplicant.conf
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
