Revert "skate: Some updates"
This reverts commit a34110b7d3701c1f03cd5e4b83f41fc99b84158f.

--- a/recovery/recovery.rc
+++ b/recovery/recovery.rc
@@ -1,6 +1,10 @@
 on early-init
     start ueventd
 
+# Setup android gadget
+   write /sys/module/g_android/parameters/serial_number CWM-Skate
+   write /sys/module/g_android/parameters/product_id 0x1354
+
 on init
     export PATH /sbin
     export ANDROID_ROOT /system
