skate: multiple updates
Thanks to KonstaT for these

* update dalvik options
* add permission for bootpulse and adb sideload

Change-Id: I75fd7ded8f67498cc74943bb8c19ea2fb3beee53

--- a/recovery/recovery.rc
+++ b/recovery/recovery.rc
@@ -29,6 +29,10 @@ on init
     mount /dev/block/vold/179:1 /sdcard/ vfat
     symlink /sdcard /mnt/sdcard
 
+# ADB sideload permissions
+    chown root shell /tmp
+    chmod 0775 /tmp
+
 on boot
 
     ifup lo
