--- a/ramdisk/init.skate.rc
+++ b/ramdisk/init.skate.rc
@@ -9,6 +9,13 @@ on early-init
 
 on boot
 
+# Setup boostpulse
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+    chown system system /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
+    chown system system /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
+    chmod 0666 /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate
+    chmod 0666 /sys/devices/system/cpu/cpufreq/ondemand/boostpulse
+
 # cpufreq configurations
     write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 500000
     write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 90
