Yet another BT fixes
Conflicts:
	init.qcom.bt.sh
	ramdisk/init.skate.rc
	ramdisk/ueventd.skate.rc

--- a/ramdisk/ueventd.skate.rc
+++ b/ramdisk/ueventd.skate.rc
@@ -14,3 +14,4 @@
 /dev/pm_monitor      0770   radio     radio
 /dev/akm8962_aot     0777   system    system
 /dev/akm8962_dev     0777   system    system
+/dev/ttyHS0          0660   bluetooth net_bt_stack
