--- a/ramdisk/ueventd.skate.rc
+++ b/ramdisk/ueventd.skate.rc
@@ -6,7 +6,7 @@
 /dev/smdcntl1        0640   radio     radio
 /dev/smdcntl2        0640   radio     radio
 /dev/taos            0777   root      root
-/dev/si4708          0777   root      root
+/dev/si4708          0660   system    audio
 /dev/msm_preproc_ctl 0660   system    audio
 /dev/genlock         0666   graphics  graphics
 /dev/kgsl-3d0        0666   graphics  graphics
