--- a/recovery/recovery.rc
+++ b/recovery/recovery.rc
@@ -1,10 +1,6 @@
 on early-init
     start ueventd
 
-# Setup android gadget
-   write /sys/module/g_android/parameters/serial_number CWM-Skate
-   write /sys/module/g_android/parameters/product_id 0x1354
-
 on init
     export PATH /sbin
     export ANDROID_ROOT /system
@@ -15,21 +11,18 @@ on init
     write /sys/class/leds/lcd-backlight/brightness 255
     write /sys/class/leds/button-backlight/brightness 255
 
+    symlink /system/etc /etc
+
     mkdir /boot
     mkdir /sdcard
-    mkdir /mnt
     mkdir /sd-ext
     mkdir /datadata
     mkdir /emmc
     mkdir /system
-    symlink /system/etc /etc
     mkdir /data
     mkdir /cache
     mount /tmp /tmp tmpfs
-    mount /dev/block/vold/179:1 /sdcard/ vfat
-    symlink /sdcard /mnt/sdcard
 
-# ADB sideload permissions
     chown root shell /tmp
     chmod 0775 /tmp
 
@@ -41,19 +34,29 @@ on boot
 
     class_start default
 
-    setprop service.adb.root 1
-
 service ueventd /sbin/ueventd
     critical
 
 service recovery /sbin/recovery
+    oneshot
 
 service adbd /sbin/adbd recovery
     disabled
 
 on property:ro.debuggable=1
+    write /sys/class/android_usb/android0/enable 0
+    write /sys/class/android_usb/android0/iSerial CWM-Skate
+    write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
+    write /sys/class/android_usb/android0/iProduct ${ro.product.model}
+    write /sys/class/android_usb/android0/idVendor 19d2
+    write /sys/class/android_usb/android0/idProduct 1351
+    write /sys/class/android_usb/android0/functions mass_storage,adb
+    write /sys/class/android_usb/android0/enable 1
     start adbd
+    setprop service.adb.root 1
 
 # Restart adbd so it can run as root
 on property:service.adb.root=1
+    write /sys/class/android_usb/android0/enable 0
     restart adbd
+    write /sys/class/android_usb/android0/enable 1
