--- a/ramdisk/init.skate.rc
+++ b/ramdisk/init.skate.rc
@@ -96,6 +96,9 @@ on boot
     write /sys/devices/platform/mass_storage/lun0/file /dev/block/mmcblk0p1
     write /sys/bus/platform/drivers/msm_sdcc/msm_sdcc.1/polling 1
 
+on fs
+    mount_all /fstab.skate
+
 on post-fs-data
 # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
