experimental Wifi-tethering part2
Change-Id: Ic98d449433bc26993423a01b09374c3fa500bfe7

--- a/ramdisk/init.skate.rc
+++ b/ramdisk/init.skate.rc
@@ -199,6 +199,12 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
+service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
+    socket hostapd_athap0 dgram 660 wifi wifi
+    group wifi inet
+    oneshot
+    disabled
+
 service dhcpcd_bt-pan /system/bin/dhcpcd -ABKL
     class main
     disabled
